--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Robot:wght@100;300;400;500;700&display=swap');
-
 :root{
-    --main-color: #d3ad7f;
-    --black: #13131a;
+    --main-color: #D3AD7F;
+    --black: #13131A;
     --bg: #005175;
     --border: .1rem solid rgb(255,255,255,.3);
 }
-
 *{
     font-family: 'Robot', sans-serif;
     margin: 0;
@@ -16,7 +14,6 @@
     text-transform: capitalize;
     transition: .2s linear;
 }
-
 html{
     font-size: 62.5%;
     overflow-x: hidden;
@@ -26,24 +23,19 @@ html{
 html::-webkit-scroll{
     width: .8rem;
 }
-
 html::-webkit-scrollbar-track{
     background: transparent;
 }
-
 html::-webkit-scrollbar-thumb{
     background: #fff;
     border-radius: 5rem;
 }
-
 body{
     background: var(--bg);
 }
-
 section{
     padding: 2rem 7%;
 }
-
 .heading{
     text-align: center;
     color: #fff;
@@ -51,12 +43,10 @@ section{
     padding-bottom: 3.5rem;
     font-size: 4rem;
 }
-
 .heading span{
     color: var(--main-color);
     text-transform: uppercase;
 }
-
 .btn{
     margin-top: 1rem;
     display: inline-block;
@@ -67,11 +57,35 @@ section{
     cursor: pointer;
     border-radius: 2rem;
 }
-
 .btn:hover{
     letter-spacing: .2rem;
 }
-
+.btn-checkout{
+    margin-top: 1rem;
+    display: inline-block;
+    padding: .9rem 3rem;
+    font-size: 1.7rem;
+    color: #fff;
+    background: var(--main-color);
+    cursor: pointer;
+    border-radius: 2rem;
+}
+.btn-checkout:hover{
+    letter-spacing: .2rem;
+}
+.btn-cart{
+    margin-top: 1rem;
+    display: inline-block;
+    padding: .9rem 3rem;
+    font-size: 1.7rem;
+    color: #fff;
+    background: var(--main-color);
+    cursor: pointer;
+    border-radius: 2rem;
+}
+.btn-cart:hover{
+    letter-spacing: .2rem;
+}
 .header{
     background: var(--bg);
     display: flex;
@@ -83,38 +97,31 @@ section{
     top:0; left: 0; right:0;
     z-index: 1000;
 }
-
 .header .logo img{
     height: 6rem;
 }
-
 .header .navbar a{
     margin: 0 1rem;
     font-size: 1.6rem;
     color:#fff;
 }
-
 .header .navbar a:hover{
     color:var(--main-color);
     border-bottom: .1rem solid var(--main-color);
     padding-bottom: .5rem;
 }
-
 .header .icons div{
     color: #fff;
     cursor: pointer;
     font-size: 2.5rem;
     margin-left: 2rem;
 }
-
 .header .icons div:hover{
     color:var(--main-color);
 }
-
 #menu-btn{
     display: none;
 }
-
 .header .search-form{
     position: absolute;
     top:115%; right:7%;
@@ -126,12 +133,9 @@ section{
     transform: scaleY(0);
     transform-origin: top;
 }
-
 .header .search-form.active{
     transform: scaleY(1);
-
 }
-
 .header .search-form input{
     height: 100%;
     width: 100%;
@@ -140,18 +144,15 @@ section{
     padding: 1rem;
     text-transform: none;
 }
-
 .header .search-form label{
     cursor: pointer;
     font-size: 2.2rem;
     margin-right: 1.5rem;
     color:var(--black);
 }
-
 .header .search-form label:hover{
     color:var(--main-color);
 }
-
 .header .cart-items-container{
     position: absolute;
     top:100%; right: -100%;
@@ -160,15 +161,20 @@ section{
     background:#fff;
     padding: 0 1.5rem;
 }
-
 .header .cart-items-container .cart-item{
     position:relative;
     margin:2rem 0;
-    flex-direction: column; 
+    flex-direction: column;
     align-items: center;
     gap:1.5rem;
 }
-
+.cart-items-container #cart-total {
+    font-size: 1.6rem;
+    color: var(--main-color);
+    margin-top: 2rem;
+    text-align: center;
+    font-weight: bold;
+}
 .header .cart-items-container .cart-item fa-times{
     position: absolute;
     top:1rem; right: 1rem;
@@ -176,42 +182,31 @@ section{
     cursor: pointer;
     color: var(--black);
 }
-
 .header .cart-items-container .cart-item fa-times:hover{
     color:var(--main-color);
-
 }
-
 .header .cart-items-container .cart-item img{
     height: 7rem;
 }
-
 .header .cart-items-container .cart-item .content {
     height: 7rem;
 }
-
 .header .cart-items-container .cart-item .content h3 {
   font-size: 2rem;
   color: var(--black);
   padding-bottom: .5rem;
 }
-
 .header .cart-items-container .cart-item .content .price {
     font-size: 1.5rem;
     color: var(--main-color);
-   
   }
-
   .header .cart-items-container.active{
     right:0;
   }
-
   .header ,.cart-items-container .btn{
     width: 100%;
     text-align: center;
-    
   }
-
 .home{
     min-height: 100vh;
     display: flex;
@@ -220,17 +215,14 @@ section{
     background-size: cover;
     background-position: center;
 }
-
 .home .content{
     max-width: 60rem;
 }
-
 .home .content h3{
     max-width: 6rem;
     text-decoration: uppercase;
     color:#fff;
 }
-
 .home .content p{
     max-width: 2rem;
     font-weight: lighter;
@@ -238,122 +230,84 @@ section{
     padding: 1rem 0;
     color:#eee;
 }
-
 .about .row{
     display: flex;
     align-items:center;
     background:var(--black);
     flex-wrap: wrap;
 }
-
 .about .row ,image{
     flex: 1 1 20rem; /* Change the flex value to adjust the size */
 }
-
 .about .row ,image img{
     width: 100%;
     max-width: 100%; /* Add this line to ensure the image doesn't exceed its container */
     height: auto; /* Add this line to maintain the aspect ratio of the image */
 }
-
 .about .row ,content{
     flex:1 1 45rem;
     padding: 2rem;
 }
-
 .about .row .content h3{
 font-size: 3rem;
 color: #fff;
 }
-
 .about .row .content p{
     font-size: 1.6rem;
     color: #ccc;
     padding:1rem 0;
     line-height: 1.8;
 }
-
 .products .box-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     gap: 1.5rem;
 }
-
 .products .box-container .box{
     padding: 5rem;
     text-align: center;
     border: var(--border);
 }
-
 .products .box-container .box img{
     height: 10rem;
 }
-
 .products .box-container .box h3{
     color:#fff;
     font-size: 2rem;
     padding: 1rem;
 }
-
 .products .box-container .box price{
     color:#fff;
     font-size: 2.5rem;
     padding: 5rem 0;
 }
-
 .products .box-container .box price span{
     color:#fff;
     font-size: 1.5rem;
    text-decoration: line-through;
 }
-
 .products .box-container .box:hover{
     background:#fff;
 }
-
 .products .box-container .box:hover > *{
     color: var(--black);
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   /* media queries */
   @media (max-width:991px){
     html{
-        font-size: 55%; 
+        font-size: 55%;
     }
-
     .header{
         padding: 1.5rem 2rem;
     }
-
     section{
         padding: 2rem;
     }
   }
-
   @media (max-width:768px){
     #menu-btn{
         display: inline-block;
     }
-
     .header .navbar{
         padding: absolute;
         top: 100%; right: -100%;
@@ -361,11 +315,9 @@ color: #fff;
         width: 30rem;
         height: calc(100vh - 95rem);
     }
-
     .header .navbar.active{
         right: 0;
     }
-
     .header .navbar a{
         color:var(--black);
         display: block;
@@ -373,35 +325,36 @@ color: #fff;
         padding:.5rem;
         font-size: 2rem;
     }
-
-    
 .header .search-form{
     width: 90%;
     right: 2rem;
 }
-
 .home{
     background-position: left;
     justify-content: center;
     text-align: center;
 }
-
 .home ,content h3{
     font-size: 4.5rem;
 }
-
 .home ,content p{
     font-size: 1.5rem;
 }
-    
   }
   @media (max-width:450px){
     html{
-        font-size: 50%; 
+        font-size: 50%;
     }
-
     .header{
         padding: 1.5rem 2rem;
     }
   }
-  
+
+
+
+
+
+
+
+
+
